.k8s/live-1/uat/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: laa-court-data-ui-app-ingress
  namespace: laa-court-data-ui-uat
  annotations:
    kubernetes.io/ingress.class: modsec01
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/modsecurity-snippet: |
      SecRuleEngine On
      SecAction "id:900110,phase:1,nolog,pass,t:none,setvar:tx.inbound_anomaly_score_threshold=6"
    external-dns.alpha.kubernetes.io/set-identifier: laa-court-data-ui-app-ingress-laa-court-data-ui-uat-blue
    external-dns.alpha.kubernetes.io/aws-weight: "100"
    nginx.ingress.kubernetes.io/server-snippet: |
        deny 223.178.211.9;
        deny 143.244.161.10;
        deny 206.72.194.213;
        deny 209.126.4.156;
        deny 159.89.81.120;
        deny 34.81.90.170;
        deny 223.178.212.103;
spec:
  rules:
    - host: uat.view-court-data.service.justice.gov.uk
      http:
        paths:
          - path: /
            backend:
              serviceName: laa-court-data-ui-app-service
              servicePort: 80
  tls:
    - hosts:
      - uat.view-court-data.service.justice.gov.uk
      secretName: laa-court-data-ui-uat-cert
